NetBSD Problem Report #42718

From www@NetBSD.org  Tue Feb  2 09:45:29 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 17E5D63B9FC
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2010 09:45:29 +0000 (UTC)
Message-Id: <20100202094528.DDE5D63B886@www.NetBSD.org>
Date: Tue,  2 Feb 2010 09:45:28 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing parenthesis in sys/dev/pci/if_de.c
X-Send-Pr-Version: www-1.0

>Number:         42718
>Category:       kern
>Synopsis:       Missing parenthesis in sys/dev/pci/if_de.c
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 09:50:00 +0000 2010
>Closed-Date:    Tue Feb 02 15:03:33 +0000 2010
>Last-Modified:  Tue Feb 02 15:03:33 +0000 2010
>Originator:     Henning Petersen
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
Missing parenthesis found by cppcheck.
>How-To-Repeat:

>Fix:
diff -u -r1.135 if_de.c
--- sys/dev/pci/if_de.c	19 Jan 2010 22:07:00 -0000	1.135
+++ sys/dev/pci/if_de.c	2 Feb 2010 09:11:00 -0000
@@ -3760,7 +3760,7 @@
 #if defined(__NetBSD__)
 		(*ifp->if_input)(ifp, ms);
 #else
-		m_adj(ms, sizeof(struct ether_header);
+		m_adj(ms, sizeof(struct ether_header));
 		ether_input(ifp, &eh, ms);
 #endif /* __NetBSD__ */
 #else
@@ -3774,7 +3774,7 @@
 #if defined(__NetBSD__)
 		(*ifp->if_input)(ifp, m0);
 #else
-		m_adj(m0, sizeof(struct ether_header);
+		m_adj(m0, sizeof(struct ether_header));
 		ether_input(ifp, &eh, m0);
 #endif /* __NetBSD__ */
 		m0 = ms;

>Release-Note:

>Audit-Trail:
From: Thomas Klausner <wiz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42718 CVS commit: src/sys/dev/pci
Date: Tue, 2 Feb 2010 14:57:45 +0000

 Module Name:	src
 Committed By:	wiz
 Date:		Tue Feb  2 14:57:45 UTC 2010

 Modified Files:
 	src/sys/dev/pci: if_de.c

 Log Message:
 Add missing parentheses, found by cppcheck and reported by
 Henning Petersen in PR 42718.


 To generate a diff of this commit:
 cvs rdiff -u -r1.135 -r1.136 src/sys/dev/pci/if_de.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Tue, 02 Feb 2010 15:03:33 +0000
State-Changed-Why:
Fixed, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.