Add missing parentheses, found by cppcheck and reported by Henning Petersen in PR 42718.